--- a/sanas-finanzas/index.html
+++ b/sanas-finanzas/index.html
@@ -21,12 +21,17 @@
 
   <div id="app-container" class="contenedor oculto">
     <h1>Sanas Finanzas</h1>
+
+    <div id="balance-grande" style="font-size: 2.5em; font-weight: 700; margin-bottom: 20px; color: #28a745;">
+      $0.00
+    </div>
+
     <button onclick="logout()">Cerrar sesión</button>
 
     <div class="resumen">
       <div class="resumen-item resumen-ingresos">Ingresos: <span id="total-ingresos">$0.00</span></div>
       <div class="resumen-item resumen-gastos">Gastos: <span id="total-gastos">$0.00</span></div>
-      <div class="resumen-item" id="balance">Balance: $0.00</div>
+      <!-- balance pequeño eliminado para no duplicar -->
     </div>
 
     <div class="formulario">
