--- a/sanas-finanzas/index.html
+++ b/sanas-finanzas/index.html
@@ -48,8 +48,9 @@
     </div>
 
     <ul id="lista"></ul>
-  </div>
-
+<!-- Mover el botón al final -->
+  <button onclick="logout()" style="margin-top: 30px; background-color:#dc3545;">Cerrar sesión</button>
+</div>
   <script src="script.js"></script>
   <script>
     if ('serviceWorker' in navigator) {
