--- a/sanas-finanzas/index.html
+++ b/sanas-finanzas/index.html
@@ -25,6 +25,7 @@
 
   <div class="contenedor oculto" id="app-container">
     <h1>Balance: <span id="balance">$0</span></h1>
+    <button onclick="logout()">Cerrar sesión</button>
     <div class="flex-row" style="align-items:center; margin-top: 15px;">
       <input type="text" id="descripcion" placeholder="Descripción" class="flex-grow" />
       <input type="number" id="monto" placeholder="Monto" min="0" />
@@ -47,8 +48,6 @@
     </div>
 
     <ul id="lista"></ul>
-
-    <button onclick="logout()" style="margin-top: 30px; background-color:#dc3545; width: 100%;">Cerrar sesión</button>
   </div>
 
   <script src="script.js"></script>
