--- a/sanas-finanzas/index.html
+++ b/sanas-finanzas/index.html
@@ -1,60 +1,50 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Sanas Finanzas</title>
-  <link rel="manifest" href="manifest.json" />
-  <meta name="theme-color" content="#28a745" />
-  <link rel="icon" type="image/png" href="icono192.png" />
-  <link rel="stylesheet" href="estilos.css" />
-  <!-- Firebase SDKs Compatibles -->
-  <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-auth-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore-compat.js"></script>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<title>Fintonic Simple</title>
+<link rel="stylesheet" href="estilos.css" />
+<script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-auth-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore-compat.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
-  <div class="contenedor" id="login-container">
-    <h1>Sanas Finanzas</h1>
+  <div id="login-container" class="contenedor">
+    <h1>Fintonic Simple</h1>
     <input type="email" id="email" placeholder="Correo electrónico" />
     <input type="password" id="password" placeholder="Contraseña" />
     <button onclick="login()">Iniciar sesión</button>
     <button onclick="register()">Registrarse</button>
-    <p id="error-login" class="error-msg"></p>
   </div>
 
-  <div class="contenedor oculto" id="app-container">
-    <h1>Balance: <span id="balance">$0</span></h1>
+  <div id="app-container" class="contenedor oculto">
+    <h1>Balance: <span id="balance">$0.00</span></h1>
     <button onclick="logout()">Cerrar sesión</button>
-    <div class="flex-row" style="align-items:center; margin-top: 15px;">
-      <input type="text" id="descripcion" placeholder="Descripción" class="flex-grow" />
-      <input type="number" id="monto" placeholder="Monto" min="0" />
-      <button id="tipoToggleBtn" class="tipo-toggle-btn tipo-ingreso" onclick="toggleTipo()">Ingreso</button>
-    </div>
-    <select id="categoria">
-      <option value="General">General</option>
-      <option value="Comida">Comida</option>
-      <option value="Transporte">Transporte</option>
-      <option value="Salud">Salud</option>
-      <option value="Otros">Otros</option>
-    </select>
-    <button onclick="agregarTransaccion()">Agregar</button>
-    <p id="error-transaccion" class="error-msg"></p>
 
-    <div class="resumen" style="margin-top:20px;">
-      <div class="resumen-item resumen-ingresos">Ingresos: <span id="total-ingresos">$0</span></div>
-      <div class="resumen-item resumen-gastos">Gastos: <span id="total-gastos">$0</span></div>
-      <div class="resumen-item">Balance: <span id="balance-det">$0</span></div>
+    <div class="formulario">
+      <input type="text" id="descripcion" placeholder="Descripción" />
+      <input type="number" id="monto" placeholder="Monto" />
+      <select id="tipo">
+        <option value="ingreso">Ingreso</option>
+        <option value="gasto">Gasto</option>
+      </select>
+      <select id="categoria">
+        <option value="General">General</option>
+        <option value="Comida">Comida</option>
+        <option value="Transporte">Transporte</option>
+        <option value="Salud">Salud</option>
+        <option value="Otros">Otros</option>
+      </select>
+      <button onclick="agregarTransaccion()">Agregar</button>
     </div>
+
+    <canvas id="grafico" width="400" height="200"></canvas>
 
     <ul id="lista"></ul>
   </div>
 
   <script src="script.js"></script>
-  <script>
-    if ('serviceWorker' in navigator) {
-      navigator.serviceWorker.register('service-worker.js');
-    }
-  </script>
 </body>
 </html>
