--- a/sanas-finanzas/index.html
+++ b/sanas-finanzas/index.html
@@ -48,6 +48,8 @@
     </div>
 
     <ul id="lista"></ul>
+    <!-- NUEVO ELEMENTO PARA LISTA VACÍA -->
+    <p id="lista-vacia-msg" class="mensaje-vacio oculto">Aún no has agregado ningún movimiento.</p>
   </div>
 
   <script src="script.js"></script>
