--- a/sanas-finanzas/index.html
+++ b/sanas-finanzas/index.html
@@ -23,33 +23,51 @@
     <p id="error-login" class="error-msg"></p>
   </div>
 
-  <div class="contenedor oculto" id="app-container">
-    <h1>Balance: <span id="balance">$0</span></h1>
-    <button onclick="logout()">Cerrar sesión</button>
-    <div class="flex-row" style="align-items:center; margin-top: 15px;">
-      <input type="text" id="descripcion" placeholder="Descripción" class="flex-grow" />
-      <input type="number" id="monto" placeholder="Monto" min="0" />
-      <button id="tipoToggleBtn" class="tipo-toggle-btn tipo-ingreso" onclick="toggleTipo()">Ingreso</button>
-    </div>
-    <select id="categoria">
-      <option value="General">General</option>
-      <option value="Comida">Comida</option>
-      <option value="Transporte">Transporte</option>
-      <option value="Salud">Salud</option>
-      <option value="Otros">Otros</option>
-    </select>
-    <button onclick="agregarTransaccion()">Agregar</button>
-    <p id="error-transaccion" class="error-msg"></p>
+  <div class="contenedor app-container oculto" id="app-container">
+    <header class="app-header">
+      <h1>Balance General</h1>
+      <span id="balance" class="balance-principal">$0</span>
+    </header>
 
-    <div class="resumen" style="margin-top:20px;">
-      <div class="resumen-item resumen-ingresos">Ingresos: <span id="total-ingresos">$0</span></div>
-      <div class="resumen-item resumen-gastos">Gastos: <span id="total-gastos">$0</span></div>
-      <div class="resumen-item">Balance: <span id="balance-det">$0</span></div>
-    </div>
+    <section class="form-section">
+        <h2>Agregar Nuevo Movimiento</h2>
+        <div class="input-group">
+            <input type="text" id="descripcion" placeholder="Descripción" />
+        </div>
+        <div class="input-group flex-row">
+          <input type="number" id="monto" placeholder="Monto" min="0" class="flex-grow" />
+          <button id="tipoToggleBtn" class="tipo-toggle-btn tipo-ingreso" onclick="toggleTipo()">Ingreso</button>
+        </div>
+        <div class="input-group">
+          <select id="categoria">
+            <option value="General">General</option>
+            <option value="Comida">Comida</option>
+            <option value="Transporte">Transporte</option>
+            <option value="Salud">Salud</option>
+            <option value="Otros">Otros</option>
+          </select>
+        </div>
+        <button onclick="agregarTransaccion()" class="btn-agregar-transaccion">Agregar Movimiento</button>
+        <p id="error-transaccion" class="error-msg"></p>
+    </section>
 
-    <ul id="lista"></ul>
-    <!-- NUEVO ELEMENTO PARA LISTA VACÍA -->
-    <p id="lista-vacia-msg" class="mensaje-vacio oculto">Aún no has agregado ningún movimiento.</p>
+    <section class="resumen-section">
+      <h2>Resumen del Mes</h2>
+      <div class="resumen">
+        <div class="resumen-item">Ingresos: <span id="total-ingresos">$0</span></div>
+        <div class="resumen-item">Gastos: <span id="total-gastos">$0</span></div>
+        <div class="resumen-item">Balance: <span id="balance-det">$0</span></div>
+      </div>
+    </section>
+
+    <section class="transacciones-section">
+        <h2>Movimientos Recientes</h2>
+        <ul id="lista"></ul>
+        <p id="lista-vacia-msg" class="mensaje-vacio oculto">Aún no has agregado ningún movimiento.</p>
+    </section>
+
+    <!-- Botón de Cerrar Sesión movido al final -->
+    <button onclick="logout()" class="btn-logout">Cerrar sesión</button>
   </div>
 
   <script src="script.js"></script>
