--- a/sanas-finanzas/index.html
+++ b/sanas-finanzas/index.html
@@ -23,6 +23,7 @@
     <p id="error-login" class="error-msg"></p>
   </div>
 
+  <!-- Contenedor principal de la App -->
   <div class="contenedor app-container oculto" id="app-container">
     <header class="app-header">
       <h1>Balance General</h1>
@@ -54,8 +55,8 @@
     <section class="resumen-section">
       <h2>Resumen del Mes</h2>
       <div class="resumen">
-        <div class="resumen-item">Ingresos: <span id="total-ingresos">$0</span></div>
-        <div class="resumen-item">Gastos: <span id="total-gastos">$0</span></div>
+        <div class="resumen-item resumen-ingresos">Ingresos: <span id="total-ingresos">$0</span></div>
+        <div class="resumen-item resumen-gastos">Gastos: <span id="total-gastos">$0</span></div>
         <div class="resumen-item">Balance: <span id="balance-det">$0</span></div>
       </div>
     </section>
