--- a/sanas-finanzas/index.html
+++ b/sanas-finanzas/index.html
@@ -5,8 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Sanas Finanzas</title>
   <link rel="manifest" href="manifest.json" />
-  <meta name="theme-color" content="#28a745" />
-  <link rel="icon" type="image/png" href="icono192.png" />
+  <meta name="theme-color" content="#3498db" /> <link rel="icon" type="image/png" href="icono192.png" />
   <link rel="stylesheet" href="estilos.css" />
   <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-auth-compat.js"></script>
