--- a/sanas-finanzas/index.html
+++ b/sanas-finanzas/index.html
@@ -2,10 +2,10 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Sanas Finanzas</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" /> <title>Sanas Finanzas</title>
   <link rel="manifest" href="manifest.json" />
-  <meta name="theme-color" content="#3498db" /> <link rel="icon" type="image/png" href="icono192.png" />
+  <meta name="theme-color" content="#3498db" />
+  <link rel="icon" type="image/png" href="icono192.png" />
   <link rel="stylesheet" href="estilos.css" />
   <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-auth-compat.js"></script>
@@ -20,7 +20,7 @@
     <input type="password" id="password" placeholder="Contraseña" />
     <button onclick="login()">Iniciar sesión</button>
     <button onclick="register()">Registrarse</button>
-    </div>
+  </div>
 
   <div class="contenedor oculto" id="app-container">
     <h1>Balance: <span id="balance">$0</span></h1>
@@ -38,6 +38,7 @@
       <option value="Otros">Otros</option>
     </select>
     <button onclick="agregarTransaccion()">Agregar</button>
+
     <div class="resumen" style="margin-top:20px;">
       <div class="resumen-item resumen-ingresos">Ingresos: <span id="total-ingresos">$0</span></div>
       <div class="resumen-item resumen-gastos">Gastos: <span id="total-gastos">$0</span></div>
