--- a/bentorneos/index.html
+++ b/bentorneos/index.html
@@ -1,5 +1,7 @@
 
-    <header><h1>Gestor de Torneos</h1></header>
+    <header><h1>Gestor de Torneos</h1>
+<button onclick="nuevoTorneo()" style="margin-top: 10px;">♻️ Nuevo Torneo</button>
+</header>
     <div id="tabs">
       <button class="tab-button active" data-tab="inscripcion">1. Inscripción</button>
       <button class="tab-button" data-tab="round-robin" disabled>2. Fase de Grupos</button>
